--- a/samurai-store/package.json
+++ b/samurai-store/package.json
@@ -14,7 +14,8 @@
     "mysql2": "^3.15.1",
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "stripe": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
