--- a/samurai-store/package.json
+++ b/samurai-store/package.json
@@ -28,5 +28,9 @@
     "eslint-config-next": "15.5.4",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": "22.x",
+    "npm": "10.x"
   }
 }
